--- a/index.html
+++ b/index.html
@@ -1,5 +1,2 @@
-Reyna ☆:.｡.o(≧▽≦)o.｡.:☆
-I am a member of the greatest nation in the world, Turkiye
-
-<h1>Hi</h1>
-<p>Hello</p>
+<h1>Reyna ☆:.｡.o(≧▽≦)o.｡.:☆</h1>
+<h2>I am a member of the greatest nation, Turkiye</h2>
